--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "colorlog~=6.7.0",
     "redis~=4.4.2",
     "pre-commit~=3.5.0",
+    "limits~=5.6.0",
 ]
 
 [project.optional-dependencies]
